--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
   "license": "MIT",
   "dependencies": {
     "zenn-cli": "^0.1.150"
+  },
+  "scripts": {
+    "preview": "zenn preview",
+    "build": "zenn build",
+    "new": "zenn new:article"
   }
 }
