fix: use `deno task` instead of `deno run` for zenn commands

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,5 +1,8 @@
 {
   "tasks": {
-    "preview": "deno run -A --unstable-fs npm:zenn-cli@latest preview"
-  }
+    "zenn": "deno run --unstable-fs --allow-sys --allow-run --allow-net --allow-read --allow-env --allow-write npm:zenn-cli@latest",
+    "new": "deno task zenn new:article",
+    "preview": "deno task zenn preview --open -p 4000"
+  },
+  "lock": false
 }
